Sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: sonarqube
